extend matching parameters, restructure repository

--- a/notebooks/asset_notebook.ipynb
+++ b/notebooks/asset_notebook.ipynb
@@ -2,40 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "\n",
     "import os\n",
     "import fitz\n",
-    "import json\n",
     "import sys\n",
     "import yaml\n",
-    "\n",
+    "import os\n",
     "\n",
     "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
+    "if repo_root not in sys.path:\n",
+    "    sys.path.append(repo_root)\n",
     "\n",
-    "from text import create_text_lines\n",
-    "from detect_language import detect_language_of_document\n",
-    "from TOCExtractor import TOCExtractor\n"
+    "\n",
+    "from src.text import create_text_lines\n",
+    "from src.detect_language import detect_language_of_page\n",
+    "from src.TOCExtractor import TOCExtractor\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -81,11 +73,11 @@
    "source": [
     "with fitz.open(pdf_path) as doc:\n",
     "\n",
-    "    language = detect_language_of_document(doc)\n",
     "    text_lines=[]\n",
     "\n",
-    "    for page_index, page in enumerate(doc):\n",
-    "        page_number = page_index + 1\n",
+    "    for page_number, page in enumerate(doc, start = 1):\n",
+    "        language = detect_language_of_page(page)\n",
+    "\n",
     "        text_lines.extend(create_text_lines(page, page_number))\n",
     "    extractor = TOCExtractor(matching_params)\n",
     "\n",
