add mlflow tracking and change evaluation

--- a/notebooks/classify_digital_page.ipynb
+++ b/notebooks/classify_digital_page.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -23,12 +14,14 @@
     "import json\n",
     "import sys\n",
     "\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
     "\n",
-    "from text import extract_words\n",
-    "from bounding_box import cluster_drawings\n",
-    "from utils import is_digitally_born, classify_text_density, process_documents\n"
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if repo_root not in sys.path:\n",
+    "    sys.path.append(repo_root)\n",
+    "\n",
+    "from src.text import extract_words\n",
+    "from src.bounding_box import cluster_drawings\n",
+    "from src.utils import is_digitally_born, classify_text_density\n"
    ]
   },
   {
@@ -94,13 +87,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = process_documents(pdf_path, classify_pages)\n",
-    "with open(os.path.join(repo_root,\"data/predictions.json\"), 'w', encoding='utf-8') as json_file:\n",
-    "        json.dump(predictions, json_file, indent=4, ensure_ascii=False)"
+    "# predictions = process_documents(pdf_path, classify_pages)\n",
+    "# with open(os.path.join(repo_root,\"data/predictions.json\"), 'w', encoding='utf-8') as json_file:\n",
+    "#         json.dump(predictions, json_file, indent=4, ensure_ascii=False)"
    ]
   }
  ],
