--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/boreprofile/43283_41.pdf\n"
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/title_page/44179_1.pdf\n"
      ]
     }
    ],
@@ -45,28 +45,27 @@
     "sys.path.append(os.path.join(repo_root, \"src\"))\n",
     "\n",
     "\n",
-    "filename = \"43283.pdf\"\n",
+    "filename = \"44179.pdf\"\n",
+    "wanted_pages = range(1,2)\n",
+    "out_category = \"title_page\"\n",
     "\n",
-    "pdf_path = os.path.join(repo_root, \"data/input\", filename)\n",
-    "out_dir = os.path.join(repo_root, \"data/input/boreprofile\")\n",
-    "\n",
-    "wanted_page = 41\n",
+    "pdf_path = os.path.join(repo_root, \"data/input/long_reports\", filename)\n",
+    "out_dir = os.path.join(repo_root, f\"data/input/{out_category}\")\n",
+    "os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
     "with pymupdf.open(pdf_path) as doc:\n",
-    "    out_path= os.path.join(out_dir,f\"{ os.path.splitext(filename)[0]}_{wanted_page}.pdf\")\n",
-    "    new_doc = pymupdf.open()\n",
-    "    for page_index,page in enumerate(doc):\n",
-    "        page_number = page_index +1\n",
+    "   for page_index,page in enumerate(doc):\n",
+    "         page_number = page_index +1\n",
+    "      \n",
+    "         if page_number in wanted_pages:\n",
+    "               out_path= os.path.join(out_dir,f\"{ os.path.splitext(filename)[0]}_{page_number}.pdf\")\n",
     "\n",
-    "        if page_number == wanted_page:\n",
-    "            # pixmap = page.get_pixmap()\n",
-    "            # image = Image.frombytes(\"RGB\", [pixmap.width, pixmap.height], pixmap.samples)\n",
-    "            # image.show()\n",
-    "            \n",
-    "            new_doc.insert_pdf(doc, from_page=wanted_page-1, to_page=wanted_page-1)\n",
-    "            new_doc.save(out_path)\n",
-    "            new_doc.close()\n",
-    "    print(f\"saved to {out_path}\")"
+    "               new_doc = pymupdf.open()\n",
+    "\n",
+    "               new_doc.insert_pdf(doc, from_page=page_index, to_page=page_index)\n",
+    "               new_doc.save(out_path)\n",
+    "               new_doc.close()\n",
+    "               print(f\"saved to {out_path}\")"
    ]
   }
  ],
