--- a/notebooks/asset-notebook_S3.ipynb
+++ b/notebooks/asset-notebook_S3.ipynb
@@ -23,7 +23,15 @@
     "import os\n",
     "import fitz\n",
     "import boto3\n",
+    "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "import sys\n",
+    "\n",
+    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
+    "if repo_root not in sys.path:\n",
+    "    sys.path.append(repo_root)\n",
+    "\n",
+    "from src.utils import is_digitally_born\n",
     "\n",
     "base_dir = os.getcwd()\n",
     "\n",
@@ -37,7 +45,7 @@
    "outputs": [],
    "source": [
     "s3_input = \"asset/asset_files_new_ocr/\"\n",
-    "s3_aws_profile = \"assets\"\n",
+    "s3_aws_profile = \"779726271945_swissgeol-assets-ro\"\n",
     "s3_session = boto3.Session(profile_name=s3_aws_profile)\n",
     "s3 = s3_session.resource('s3')\n",
     "bucket = s3.Bucket('swissgeol-assets-swisstopo')"
@@ -45,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,16 +62,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pdf_path = \"data/NAB/Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
-    "\n",
-    "output_dir = \"data/text_files/\"\n",
+    "output_dir = \"./data/text_files/\"\n",
     "\n",
     "def key_to_filename(key):\n",
     "    return key.split(\"/\")[-1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 75%|███████▍  | 11964/15997 [2:29:21<17:45,  3.79it/s, asset/asset_files_new_ocr/44229.pdf]       "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MuPDF error: format error: No default Layer config\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 15997/15997 [2:51:48<00:00,  1.55it/s, asset/asset_files_new_ocr/a990_989_LDoc.pdf]                                                                                                  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# count page number of pdfs and save to data\n",
+    "output_path = \"./data/page_numbers.csv\"\n",
+    "os.makedirs(\"./data\", exist_ok=True)\n",
+    "page_data = []\n",
+    "with tqdm(total=len(objs)) as pbar:\n",
+    "\n",
+    "    for obj in objs:\n",
+    "        pbar.set_postfix_str(obj.key)\n",
+    "        \n",
+    "        filename = key_to_filename(obj.key)\n",
+    "        if filename.endswith(\".pdf\"):\n",
+    "                    tmp_file_path = os.path.join(\"./data\", filename)\n",
+    "                    bucket.download_file(obj.key, tmp_file_path)\n",
+    "\n",
+    "                    doc = fitz.open(tmp_file_path)\n",
+    "                    \n",
+    "                    num_pages = len(doc)\n",
+    "                    #count digitally born pages\n",
+    "                    digital_pages = sum(is_digitally_born(page) for page in doc)\n",
+    "\n",
+    "                    digital_ratio = digital_pages / num_pages\n",
+    "                    if digital_ratio >= 0.8:\n",
+    "                        category = \"digital\"\n",
+    "                    elif digital_ratio <= 0.2:\n",
+    "                        category = \"scanned\"\n",
+    "                    else:\n",
+    "                        category = \"both\"\n",
+    "\n",
+    "                    page_data.append({\n",
+    "                        \"filename\": filename,\n",
+    "                        \"pages\": num_pages,\n",
+    "                        \"digital_pages\": digital_pages,\n",
+    "                        \"scanned_pages\": num_pages - digital_pages,\n",
+    "                        \"category\": category\n",
+    "                    })\n",
+    "\n",
+    "                    os.remove(tmp_file_path)   \n",
+    "\n",
+    "        \n",
+    "        pbar.update(1)\n",
+    "        \n",
+    "df = pd.DataFrame(page_data)\n",
+    "df.to_csv(output_path, index=False)"
    ]
   },
   {
@@ -72,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#write text of pdf into text files\n",
     "with tqdm(total=len(objs)) as pbar:\n",
     "\n",
     "    for obj in objs:\n",
@@ -79,7 +160,7 @@
     "        \n",
     "        filename = key_to_filename(obj.key)\n",
     "        if filename.endswith(\".pdf\"):\n",
-    "                    tmp_file_path = os.path.join(\"data\", filename)\n",
+    "                    tmp_file_path = os.path.join(\"./data\", filename)\n",
     "                    bucket.download_file(obj.key, tmp_file_path)\n",
     "\n",
     "                    doc = fitz.open(tmp_file_path)\n",
@@ -93,8 +174,7 @@
     "                    os.remove(tmp_file_path)   \n",
     "\n",
     "        \n",
-    "        pbar.update(1)\n",
-    "\n"
+    "        pbar.update(1)\n"
    ]
   }
  ],
