adjust paths, f1 metrics in mlflow

--- a/notebooks/create_testdata.ipynb
+++ b/notebooks/create_testdata.ipynb
@@ -2,14 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/title_page/44179_1.pdf\n"
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_1.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_2.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_3.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_4.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_5.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_6.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_7.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_8.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_9.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_10.pdf\n",
+      "saved to /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/18686_11.pdf\n"
      ]
     }
    ],
@@ -38,18 +48,17 @@
     "\n",
     "import os\n",
     "import pymupdf\n",
-    "from PIL import Image\n",
     "import sys\n",
     "\n",
     "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
     "sys.path.append(os.path.join(repo_root, \"src\"))\n",
     "\n",
     "\n",
-    "filename = \"44179.pdf\"\n",
-    "wanted_pages = range(1,2)\n",
-    "out_category = \"title_page\"\n",
+    "filename = \"18686.pdf\"\n",
+    "wanted_pages = range(0,400)\n",
+    "out_category = \"\"\n",
     "\n",
-    "pdf_path = os.path.join(repo_root, \"data/input/long_reports\", filename)\n",
+    "pdf_path = os.path.join(repo_root, \"data/input/\", filename)\n",
     "out_dir = os.path.join(repo_root, f\"data/input/{out_category}\")\n",
     "os.makedirs(out_dir, exist_ok=True)\n",
     "\n",
