--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
+    "filename =\"input/reports_no_gt/NAB_12-051.pdf\"\n",
     "filename = \"266126001-bp.pdf\"\n",
-    "pdf_path = os.path.join(repo_root, \"data/input/maps\", filename)\n",
+    "pdf_path = os.path.join(repo_root, \"data/input/sinlge_pages/maps\", filename)\n",
     "pdf_path =  \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/266126001-bp.pdf\""
    ]
   },
