--- a/notebooks/classify_digital_page.ipynb
+++ b/notebooks/classify_digital_page.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename =\"Berichte_NAB 10-025_Kurzarbeitsprogram Geothermiebohrung Schlattingen.PDF\"\n",
+    "filename =\"NAB_12-051.pdf\"\n",
     "\n",
-    "pdf_path = os.path.join(repo_root, \"data/NAB\", filename)\n",
+    "pdf_path = os.path.join(repo_root, \"data/input/reports_no_gt\", filename)\n",
     "out_dir = os.path.join(repo_root, \"data/test\", os.path.splitext(filename)[0])\n"
    ]
   },
@@ -86,25 +86,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "process_documents() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mprocess_documents\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpdf_path\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mclassify_pages\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(repo_root,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/predictions.json\u001b[39m\u001b[38;5;124m\"\u001b[39m), \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mw\u001b[39m\u001b[38;5;124m'\u001b[39m, encoding\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mutf-8\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m json_file:\n\u001b[1;32m      3\u001b[0m         json\u001b[38;5;241m.\u001b[39mdump(predictions, json_file, indent\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m4\u001b[39m, ensure_ascii\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: process_documents() takes 1 positional argument but 2 were given"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "predictions = process_documents(pdf_path)\n",
-    "with open(os.path.join(repo_root,\"data/predictions.json\"), 'w', encoding='utf-8') as json_file:\n",
-    "        json.dump(predictions, json_file, indent=4, ensure_ascii=False)"
+    "# predictions = process_documents(pdf_path)\n",
+    "# with open(os.path.join(repo_root,\"data/predictions.json\"), 'w', encoding='utf-8') as json_file:\n",
+    "#         json.dump(predictions, json_file, indent=4, ensure_ascii=False)"
    ]
   }
  ],
