--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,12 @@
     "from PIL import Image\n",
     "import io\n",
     "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "sys.path.append(os.path.join(repo_root, \"src\"))\n",
+    "repo_root = Path.cwd().parent.resolve()\n",
+    "\n",
+    "src_path = repo_root / \"src\"\n",
+    "sys.path.append(str(src_path))\n",
     "\n",
     "\n",
     "from text import  create_text_lines, create_text_blocks\n",
@@ -23,148 +26,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "filename =\"input/reports_no_gt/NAB_12-051.pdf\"\n",
-    "filename = \"266126001-bp.pdf\"\n",
-    "pdf_path = os.path.join(repo_root, \"data/input/sinlge_pages/maps\", filename)\n",
-    "pdf_path =  \"/home/lillemor/PycharmProjects/swissgeol-boreholes-dataextraction/data/zurich/266126001-bp.pdf\""
+    "def get_pdf_files(input_path: Path) -> list[Path]:\n",
+    "    if input_path.is_dir():\n",
+    "        return [f for f in input_path.rglob(\"*.pdf\")]\n",
+    "    elif input_path.is_file() and input_path.suffix.lower() == '.pdf':\n",
+    "        return [input_path]\n",
+    "    return []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = os.path.join(repo_root, \"data/test\", os.path.splitext(filename)[0])\n",
-    "os.makedirs(out_dir, exist_ok=True)"
+    "input_path = Path(repo_root / \"data/input/single_pages/maps/\" )\n",
+    "file_paths = get_pdf_files(input_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/266126001-bp\n"
+      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/maps/250_8.pdf\n"
      ]
     }
    ],
    "source": [
     "##extract images and drawings from document\n",
+    "for pdf_path in file_paths:\n",
+    "    filename = pdf_path.name\n",
+    "    out_dir = repo_root / \"data/test/maps\" / filename\n",
+    "    out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    with pymupdf.Document(pdf_path) as doc:\n",
+    "        for page_index,page in enumerate(doc):\n",
+    "            page_number = page_index + 1\n",
+    "            #extract images\n",
+    "            image_list = page.get_images()        \n",
+    "            for image_idx, img in enumerate(image_list):\n",
+    "                xref = img[0] \n",
+    "            # extract image bytes \n",
+    "                base_image = doc.extract_image(xref)\n",
+    "                image_bytes = base_image[\"image\"]\n",
+    "                # get image extension\n",
+    "                image_ext = base_image[\"ext\"]\n",
+    "                \n",
+    "                pil_image = Image.open(io.BytesIO(image_bytes))\n",
+    "                # Save the image to disk\n",
+    "                image_path = os.path.join(out_dir,f\"image_{page_number}_{image_idx}.{image_ext}\")\n",
+    "                pil_image.save(image_path)\n",
     "\n",
-    "with pymupdf.Document(pdf_path) as doc:\n",
-    "    for page_index,page in enumerate(doc):\n",
-    "        page_number = page_index + 1\n",
-    "        #extract images\n",
-    "        image_list = page.get_images()        \n",
-    "        for image_idx, img in enumerate(image_list):\n",
-    "            xref = img[0] \n",
-    "        # extract image bytes \n",
-    "            base_image = doc.extract_image(xref)\n",
-    "            image_bytes = base_image[\"image\"]\n",
-    "            # get image extension\n",
-    "            image_ext = base_image[\"ext\"]\n",
+    "            #extract drawings\n",
+    "            drawings = page.get_drawings()\n",
+    "            rotation = page.rotation\n",
+    "            if drawings:\n",
+    "                out_doc = pymupdf.open()\n",
+    "                outpage = out_doc.new_page(width=page.mediabox_size.x, height=page.mediabox_size.y)\n",
+    "                shape = outpage.new_shape() \n",
+    "                for draw_idx,drawing in enumerate(drawings):\n",
     "            \n",
-    "            pil_image = Image.open(io.BytesIO(image_bytes))\n",
-    "            # Save the image to disk\n",
-    "            image_path = os.path.join(out_dir,f\"image_{page_number}_{image_idx}.{image_ext}\")\n",
-    "            pil_image.save(image_path)\n",
-    "\n",
-    "        #extract drawings\n",
-    "        drawings = page.get_drawings()\n",
-    "        rotation = page.rotation\n",
-    "        if drawings:\n",
-    "            out_doc = pymupdf.open()\n",
-    "            outpage = out_doc.new_page(width=page.mediabox_size.x, height=page.mediabox_size.y)\n",
-    "            shape = outpage.new_shape() \n",
-    "            for draw_idx,drawing in enumerate(drawings):\n",
-    "        \n",
-    "                for item in drawing[\"items\"]:  # these are the draw commands\n",
-    "                    if item[0] == \"l\":  # line\n",
-    "                        shape.draw_line(item[1], item[2])\n",
-    "                    elif item[0] == \"re\":  # rectangle\n",
-    "                        shape.draw_rect(item[1])\n",
-    "                    elif item[0] == \"qu\":  # quad\n",
-    "                        shape.draw_quad(item[1])\n",
-    "                    elif item[0] == \"c\":  # curve\n",
-    "                        shape.draw_bezier(item[1], item[2], item[3], item[4])\n",
-    "                    else:\n",
-    "                        raise ValueError(\"unhandled drawing\", item)\n",
-    "                        \n",
-    "                shape.finish(\n",
-    "                    fill=drawing.get(\"fill\", None),  # Fill color\n",
-    "                    color=drawing.get(\"color\", None),  # Line color\n",
-    "                    dashes=drawing.get(\"dashes\", None),  # Line dashing\n",
-    "                )\n",
-    "            shape.commit()\n",
-    "            outpage.set_rotation(rotation)\n",
-    "            out_drawing= os.path.join(out_dir,f\"drawing_page_{page_number}.pdf\")\n",
-    "            out_doc.save(out_drawing)\n",
-    "print(f\"Images and drawings extracted to: {out_dir}\")"
+    "                    for item in drawing[\"items\"]:  # these are the draw commands\n",
+    "                        if item[0] == \"l\":  # line\n",
+    "                            shape.draw_line(item[1], item[2])\n",
+    "                        elif item[0] == \"re\":  # rectangle\n",
+    "                            shape.draw_rect(item[1])\n",
+    "                        elif item[0] == \"qu\":  # quad\n",
+    "                            shape.draw_quad(item[1])\n",
+    "                        elif item[0] == \"c\":  # curve\n",
+    "                            shape.draw_bezier(item[1], item[2], item[3], item[4])\n",
+    "                        else:\n",
+    "                            raise ValueError(\"unhandled drawing\", item)\n",
+    "                            \n",
+    "                    shape.finish(\n",
+    "                        fill=drawing.get(\"fill\", None),  # Fill color\n",
+    "                        color=drawing.get(\"color\", None),  # Line color\n",
+    "                        dashes=drawing.get(\"dashes\", None),  # Line dashing\n",
+    "                    )\n",
+    "                shape.commit()\n",
+    "                outpage.set_rotation(rotation)\n",
+    "                out_drawing= os.path.join(out_dir,filename,f\"drawing_page_{page_number}.pdf\")\n",
+    "                out_doc.save(out_drawing)\n",
+    "    print(f\"Images and drawings extracted to: {out_dir}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Page number:1, drawings with length 136, clustered 2\n"
+      "Page number:1, drawings with length 2, clustered 2\n",
+      "Page number:1, drawings with length 1, clustered 1\n"
      ]
     }
    ],
    "source": [
-    "\n",
+    "out_dir = repo_root / \"data/test/maps\"\n",
+    "out_dir.mkdir(parents=True, exist_ok=True)\n",
     "##draw bounding boxes of text and drawings and texblocks\n",
-    "with pymupdf.open(pdf_path) as doc:\n",
-    "    for page_index,page in enumerate(doc):\n",
-    "        page_number = page_index +1\n",
-    "        matrix = page.derotation_matrix\n",
+    "for pdf_path in file_paths:\n",
+    "    filename = pdf_path.name\n",
+    "    # out_dir = repo_root / \"data/test/maps\" / filename\n",
+    "    # out_dir.mkdir(parents=True, exist_ok=True)\n",
+    "    with pymupdf.open(pdf_path) as doc:\n",
+    "        for page_index,page in enumerate(doc):\n",
+    "            page_number = page_index +1\n",
+    "            matrix = page.derotation_matrix\n",
     "\n",
-    "        lines_per_page= create_text_lines(page,page_number)\n",
-    "        reading_blocks = create_text_blocks(lines_per_page)\n",
-    "        shape = page.new_shape()\n",
+    "            lines_per_page= create_text_lines(page,page_number)\n",
+    "            reading_blocks = create_text_blocks(lines_per_page)\n",
+    "            shape = page.new_shape()\n",
     "\n",
-    "        for block in reading_blocks:\n",
-    "            padded_block = expand_bbox(block.rect,3)\n",
-    "            if page.rotation != 0:\n",
-    "                oriented_block = padded_block*matrix\n",
-    "                shape.draw_rect(oriented_block)\n",
-    "            else:\n",
-    "                shape.draw_rect(padded_block)\n",
-    "        \n",
-    "        shape.finish(color=(0, 0, 1), width=1)\n",
-    "        \n",
-    "        for text_line in lines_per_page:\n",
-    "            if page.rotation!= 0:\n",
-    "                oriented_bbox = text_line.rect*matrix\n",
-    "                shape.draw_rect(oriented_bbox)\n",
-    "            else:\n",
-    "                shape.draw_rect(text_line.rect)\n",
-    "        shape.finish(color=(1, 0, 0), width=1)\n",
-    "        \n",
+    "            for block in reading_blocks:\n",
+    "                padded_block = expand_bbox(block.rect,3)\n",
+    "                if page.rotation != 0:\n",
+    "                    oriented_block = padded_block*matrix\n",
+    "                    shape.draw_rect(oriented_block)\n",
+    "                else:\n",
+    "                    shape.draw_rect(padded_block)\n",
+    "            \n",
+    "            shape.finish(color=(0, 0, 1), width=1)\n",
+    "            \n",
+    "            for text_line in lines_per_page:\n",
+    "                if page.rotation!= 0:\n",
+    "                    oriented_bbox = text_line.rect*matrix\n",
+    "                    shape.draw_rect(oriented_bbox)\n",
+    "                else:\n",
+    "                    shape.draw_rect(text_line.rect)\n",
+    "            shape.finish(color=(1, 0, 0), width=1)\n",
+    "            \n",
     "\n",
-    "        drawings = page.get_drawings()\n",
-    "        if drawings:\n",
-    "            clustered_boxes = cluster_drawings(drawings)\n",
-    "            print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
+    "            drawings = page.get_drawings()\n",
+    "            if drawings:\n",
+    "                clustered_boxes = cluster_drawings(drawings)\n",
+    "                print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
     "\n",
-    "            for cluster in clustered_boxes:\n",
-    "                shape.draw_rect(cluster)\n",
-    "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
-    "        shape.commit()\n",
+    "                for cluster in clustered_boxes:\n",
+    "                    shape.draw_rect(cluster)\n",
+    "                shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
+    "            shape.commit()\n",
     "\n",
-    "    doc.save(os.path.join(out_dir, f\"{filename}_2\"))    "
+    "        doc.save(os.path.join(out_dir, f\"{filename}_{page_number}\"))    "
    ]
   }
  ],
