--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_path = Path(repo_root / \"data/input/single_pages/maps/\" )\n",
+    "input_path = Path(repo_root / \"data/input/maps\" )\n",
     "file_paths = get_pdf_files(input_path)"
    ]
   },
@@ -52,15 +52,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/maps/250_8.pdf\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "##extract images and drawings from document\n",
     "for pdf_path in file_paths:\n",
@@ -122,24 +114,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Page number:1, drawings with length 2, clustered 2\n",
-      "Page number:1, drawings with length 1, clustered 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "out_dir = repo_root / \"data/test/maps\"\n",
+    "filename =Path(\"34239.pdf\")\n",
+    "out_dir = repo_root / \"data/test\" / filename.stem \n",
     "out_dir.mkdir(parents=True, exist_ok=True)\n",
     "##draw bounding boxes of text and drawings and texblocks\n",
     "for pdf_path in file_paths:\n",
     "    filename = pdf_path.name\n",
-    "    # out_dir = repo_root / \"data/test/maps\" / filename\n",
-    "    # out_dir.mkdir(parents=True, exist_ok=True)\n",
     "    with pymupdf.open(pdf_path) as doc:\n",
     "        for page_index,page in enumerate(doc):\n",
     "            page_number = page_index +1\n",
@@ -150,35 +132,27 @@
     "            shape = page.new_shape()\n",
     "\n",
     "            for block in reading_blocks:\n",
-    "                padded_block = expand_bbox(block.rect,3)\n",
-    "                if page.rotation != 0:\n",
-    "                    oriented_block = padded_block*matrix\n",
-    "                    shape.draw_rect(oriented_block)\n",
-    "                else:\n",
-    "                    shape.draw_rect(padded_block)\n",
+    "                padded_block = expand_bbox(block.rect, 3)\n",
+    "                shape.draw_rect(padded_block * matrix if page.rotation else padded_block)\n",
     "            \n",
     "            shape.finish(color=(0, 0, 1), width=1)\n",
     "            \n",
     "            for text_line in lines_per_page:\n",
-    "                if page.rotation!= 0:\n",
-    "                    oriented_bbox = text_line.rect*matrix\n",
-    "                    shape.draw_rect(oriented_bbox)\n",
-    "                else:\n",
-    "                    shape.draw_rect(text_line.rect)\n",
+    "                shape.draw_rect(text_line.rect * matrix if page.rotation else text_line.rect)\n",
+    "\n",
     "            shape.finish(color=(1, 0, 0), width=1)\n",
     "            \n",
-    "\n",
     "            drawings = page.get_drawings()\n",
     "            if drawings:\n",
     "                clustered_boxes = cluster_drawings(drawings)\n",
     "                print(f\"Page number:{page_number}, drawings with length {len(drawings)}, clustered {len(clustered_boxes)}\")\n",
-    "\n",
     "                for cluster in clustered_boxes:\n",
     "                    shape.draw_rect(cluster)\n",
-    "                shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
+    "                \n",
+    "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
     "            shape.commit()\n",
     "\n",
-    "        doc.save(os.path.join(out_dir, f\"{filename}_{page_number}\"))    "
+    "        doc.save(os.path.join(out_dir, f\"{filename}\"))    "
    ]
   }
  ],
