refactor identify_maps

--- a/notebooks/extract_images.ipynb
+++ b/notebooks/extract_images.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,13 @@
     "\n",
     "from text import  create_text_lines, create_text_blocks\n",
     "from bounding_box import cluster_drawings\n",
-    "from bounding_box import expand_bbox"
+    "from bounding_box import expand_bbox\n",
+    "from utils import cluster_text_elements"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,24 +41,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/lillemor/Documents/lgd-utils/asset-data-extraction/data/input/single_pages/unknown/1801_35.pdf\n"
+     ]
+    }
+   ],
    "source": [
-    "input_path = Path(repo_root / \"data/input/maps\" )\n",
-    "file_paths = get_pdf_files(input_path)"
+    "input_path = Path(repo_root / \"data/input/single_pages/unknown/1801_35.pdf\" )\n",
+    "file_paths = get_pdf_files(input_path)\n",
+    "print(input_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Images and drawings extracted to: /home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/1801_35.pdf\n"
+     ]
+    }
+   ],
    "source": [
     "##extract images and drawings from document\n",
     "for pdf_path in file_paths:\n",
     "    filename = pdf_path.name\n",
-    "    out_dir = repo_root / \"data/test/maps\" / filename\n",
+    "    out_dir = repo_root / \"data/test/\" / filename\n",
     "    out_dir.mkdir(parents=True, exist_ok=True)\n",
     "    with pymupdf.Document(pdf_path) as doc:\n",
     "        for page_index,page in enumerate(doc):\n",
@@ -114,14 +132,21 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/lillemor/Documents/lgd-utils/asset-data-extraction/data/test/1801_35/1801_35.pdf\n"
+     ]
+    }
+   ],
    "source": [
-    "filename =Path(\"34239.pdf\")\n",
-    "out_dir = repo_root / \"data/test\" / filename.stem \n",
-    "out_dir.mkdir(parents=True, exist_ok=True)\n",
     "##draw bounding boxes of text and drawings and texblocks\n",
     "for pdf_path in file_paths:\n",
     "    filename = pdf_path.name\n",
+    "    out_dir = repo_root / \"data/test\" / pdf_path.stem\n",
+    "    out_dir.mkdir(parents=True, exist_ok=True)\n",
     "    with pymupdf.open(pdf_path) as doc:\n",
     "        for page_index,page in enumerate(doc):\n",
     "            page_number = page_index +1\n",
@@ -129,6 +154,9 @@
     "\n",
     "            lines_per_page= create_text_lines(page,page_number)\n",
     "            reading_blocks = create_text_blocks(lines_per_page)\n",
+    "            # filtered_lines = [line for line in lines_per_page if len(line.words) < 4]\n",
+    "            # clusters = cluster_text_elements(filtered_lines,\n",
+    "            #                              key_fn= lambda line:line.rect.x0)\n",
     "            shape = page.new_shape()\n",
     "\n",
     "            for block in reading_blocks:\n",
@@ -136,6 +164,18 @@
     "                shape.draw_rect(padded_block * matrix if page.rotation else padded_block)\n",
     "            \n",
     "            shape.finish(color=(0, 0, 1), width=1)\n",
+    "\n",
+    "            # if filtered_lines:\n",
+    "            #     for cluster in clusters:\n",
+    "                    \n",
+    "            #         cluster_rect =pymupdf.Rect(min([line.rect.x0 for line in cluster]),\n",
+    "            #                                     min([line.rect.y0 for line in cluster]),\n",
+    "            #                                     max([line.rect.x1 for line in cluster]),\n",
+    "            #                                     max([line.rect.y1 for line in cluster]))\n",
+    "            #         shape.draw_rect(cluster_rect* matrix if page.rotation else cluster_rect) \n",
+    "                \n",
+    "            #     shape.finish(color=(0, 0, 1), width=1)\n",
+    "\n",
     "            \n",
     "            for text_line in lines_per_page:\n",
     "                shape.draw_rect(text_line.rect * matrix if page.rotation else text_line.rect)\n",
@@ -152,7 +192,8 @@
     "            shape.finish(color =(148/255, 0, 211/255),width = 1)\n",
     "            shape.commit()\n",
     "\n",
-    "        doc.save(os.path.join(out_dir, f\"{filename}\"))    "
+    "        doc.save(os.path.join(out_dir, f\"{filename}\"))    \n",
+    "        print(f\"{os.path.join(out_dir, f'{filename}')}\")    \n"
    ]
   }
  ],
