--- a/notebooks/corner_detection.ipynb
+++ b/notebooks/corner_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -28,6 +28,7 @@
     "from skimage.filters import gaussian\n",
     "from skimage.filters import threshold_otsu\n",
     "from skimage.measure import find_contours\n",
+    "import math\n",
     "\n",
     "base_dir = Path.cwd().parent.resolve()\n",
     "\n",
@@ -35,34 +36,38 @@
     "sys.path.append(str(src_path))\n",
     "print(src_path)\n",
     "\n",
-    "from line_detection import turn_page_to_image, extract_geometric_lines, group_lines_kdtree"
+    "from line_detection import turn_page_to_image, extract_geometric_lines, group_lines_kdtree\n",
+    "from text import create_text_lines"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "pdf_path = Path( base_dir /\"data/input/single_pages/maps/45004_27.pdf\" )\n",
-    "pdf_path = Path( base_dir /\"data/input/single_pages/boreprofile/29192_229.pdf\" )\n",
-    "pdf_path = Path( base_dir /\"data/input/single_pages/text/1801_9.pdf\" )\n",
+    "# pdf_path = Path( base_dir /\"data/input/single_pages/boreprofile/29192_229.pdf\" )\n",
+    "# pdf_path = Path( base_dir /\"data/input/single_pages/text/1801_9.pdf\" )\n",
     "\n",
     "\n",
     "doc = pymupdf.open(pdf_path)\n",
-    "page = doc[0]"
+    "page = doc[0]\n",
+    "page_number= 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6645\n"
+      "16.46768016199912\n",
+      "6309\n",
+      "1859\n"
      ]
     },
     {
@@ -71,23 +76,30 @@
        "True"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "image = turn_page_to_image(page)\n",
+    "\n",
     "edges, lines = extract_geometric_lines(page)\n",
+    "text_lines = create_text_lines(page, page_number)\n",
+    "text_font_size = np.mean([line.font_size for line in text_lines])\n",
+    "\n",
+    "print(text_font_size)\n",
+    "\n",
+    "longer_lines = [line for line in lines if line.length > text_font_size* math.sqrt(2)]\n",
     "\n",
     "print(len(lines) if lines is not None else 0)\n",
-    "\n",
+    "print(len(longer_lines) if longer_lines is not None else 0)\n",
     "\n",
     "line_image= np.zeros_like(image)\n",
-    "for lin in lines:\n",
+    "for lin in longer_lines:\n",
     "    cv2.line(line_image, (int(lin.start.x), int(lin.start.y)),\n",
     "                         (int(lin.end.x), int(lin.end.y)),\n",
-    "                         (225, 225, 225), 1)\n",
+    "                         (225, 225, 225), 2)\n",
     "\n",
     "# Save the image with LSD lines\n",
     "cv2.imwrite(Path(base_dir/\"data/lines.png\"), line_image)"
