draw random smaple from s3 bucket

--- a/notebooks/asset-notebook_S3.ipynb
+++ b/notebooks/asset-notebook_S3.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "'Notebook to retrieve and save all text for all files on the S3 bucket as .txt files'"
+       "'Notebook to retrieve files from the S3 bucket'"
       ]
      },
      "execution_count": 1,
@@ -25,17 +25,19 @@
     "import boto3\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
+    "import random\n",
     "import sys\n",
+    "from pathlib import Path\n",
     "\n",
-    "repo_root = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "if repo_root not in sys.path:\n",
-    "    sys.path.append(repo_root)\n",
+    "repo_root = Path.cwd().parent.resolve()\n",
     "\n",
-    "from src.utils import is_digitally_born\n",
+    "src_path = repo_root / \"src\"\n",
+    "sys.path.append(str(src_path))\n",
     "\n",
-    "base_dir = os.getcwd()\n",
     "\n",
-    "\"\"\"Notebook to retrieve and save all text for all files on the S3 bucket as .txt files\"\"\""
+    "from utils import is_digitally_born\n",
+    "\n",
+    "\"\"\"Notebook to retrieve files from the S3 bucket\"\"\""
    ]
   },
   {
@@ -62,48 +64,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_dir = \"./data/text_files/\"\n",
-    "\n",
-    "def key_to_filename(key):\n",
-    "    return key.split(\"/\")[-1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 75%|███████▍  | 11964/15997 [2:29:21<17:45,  3.79it/s, asset/asset_files_new_ocr/44229.pdf]       "
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MuPDF error: format error: No default Layer config\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 15997/15997 [2:51:48<00:00,  1.55it/s, asset/asset_files_new_ocr/a990_989_LDoc.pdf]                                                                                                  \n"
+      "/data/text_files\n"
      ]
     }
    ],
    "source": [
+    "output_dir =  repo_root / \"/data/text_files\"\n",
+    "\n",
+    "def key_to_filename(key):\n",
+    "    return key.split(\"/\")[-1]\n",
+    "\n",
+    "print(output_dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# count page number of pdfs and save to data\n",
-    "output_path = \"./data/page_numbers.csv\"\n",
-    "os.makedirs(\"./data\", exist_ok=True)\n",
+    "output_path = repo_root / \"/data/page_numbers.csv\"\n",
+    "\n",
     "page_data = []\n",
     "with tqdm(total=len(objs)) as pbar:\n",
     "\n",
@@ -112,7 +101,7 @@
     "        \n",
     "        filename = key_to_filename(obj.key)\n",
     "        if filename.endswith(\".pdf\"):\n",
-    "                    tmp_file_path = os.path.join(\"./data\", filename)\n",
+    "                    tmp_file_path = repo_root / f\"data/{filename}\"\n",
     "                    bucket.download_file(obj.key, tmp_file_path)\n",
     "\n",
     "                    doc = fitz.open(tmp_file_path)\n",
@@ -160,11 +149,11 @@
     "        \n",
     "        filename = key_to_filename(obj.key)\n",
     "        if filename.endswith(\".pdf\"):\n",
-    "                    tmp_file_path = os.path.join(\"./data\", filename)\n",
+    "                    tmp_file_path =  repo_root / f\"data/{filename}\"\n",
     "                    bucket.download_file(obj.key, tmp_file_path)\n",
     "\n",
     "                    doc = fitz.open(tmp_file_path)\n",
-    "                    output_path = os.path.join(output_dir, filename + \".txt\")\n",
+    "                    output_path = repo_root / f\"data/{filename}.txt\"\n",
     "                    \n",
     "                    with open(output_path, \"w\", encoding = \"utf-8\") as text_file:\n",
     "                        for _,page in enumerate(doc):\n",
@@ -175,6 +164,28 @@
     "\n",
     "        \n",
     "        pbar.update(1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#download random sample\n",
+    "\n",
+    "sampled_objs = random.sample(objs, 10)\n",
+    "\n",
+    "with tqdm(total=len(sampled_objs)) as pbar:\n",
+    "    for obj in sampled_objs:\n",
+    "        pbar.set_postfix_str(obj.key)\n",
+    "        \n",
+    "        filename = key_to_filename(obj.key)\n",
+    "        if filename.endswith(\".pdf\"):\n",
+    "            file_path = repo_root / f\"data/input/reports_no_gt/{filename}\"\n",
+    "            bucket.download_file(obj.key, file_path)\n",
+    "        \n",
+    "        pbar.update(1)"
    ]
   }
  ],
