update requirements and rename notebook

--- a/notebooks/line_detection.ipynb
+++ b/notebooks/line_detection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -22,14 +22,15 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "from skimage import measure\n",
+    "\n",
     "from skimage import io as io\n",
     "from skimage.color import rgb2gray\n",
-    "from skimage.filters import gaussian\n",
-    "from skimage.filters import threshold_otsu\n",
-    "from skimage.measure import find_contours\n",
+    "from skimage.filters import gaussian,threshold_otsu\n",
+    "from skimage.measure import find_contours,approximate_polygon,label\n",
+    "from skimage.transform import probabilistic_hough_line\n",
     "from math import degrees, atan2,sqrt\n",
     "from dataclasses import dataclass\n",
+    "\n",
     "base_dir = Path.cwd().parent.resolve()\n",
     "\n",
     "src_path = base_dir / \"src\"\n",
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,9 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "image = turn_page_to_image(page)\n",
     "\n",
@@ -183,12 +195,49 @@
     "                         (225, 225, 225), 2)\n",
     "\n",
     "# Save the image with LSD lines\n",
-    "cv2.imwrite(Path(base_dir/\"data/lines.png\"), line_image)"
+    "cv2.imwrite(Path(base_dir/\"data/lines_LSD.png\"), line_image)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines_HL = probabilistic_hough_line(edges, threshold=10, line_length=5, line_gap=3)\n",
+    "for line in lines_HL:\n",
+    "    p0, p1 = line  # each line is a tuple of two points\n",
+    "    cv2.line(line_image, p0, p1, (225, 225, 225), 2)\n",
+    "\n",
+    "\n",
+    "# Save the image with lines and processed images\n",
+    "cv2.imwrite(Path(base_dir/\"data/lines.png_HL\"), line_image)\n",
+    "image = turn_page_to_image(page)\n",
+    "gray = cv2.cvtColor(image, cv2.COLOR_BGR2GRAY)\n",
+    "blurred = cv2.GaussianBlur(gray, (5, 5), sigmaX=1.2)\n",
+    "cv2.imwrite(Path(base_dir/\"data/image.png\"), image)\n",
+    "\n",
+    "cv2.imwrite(Path(base_dir/\"data/gray.png\"), gray)\n",
+    "cv2.imwrite(Path(base_dir/\"data/blurred.png\"), blurred)\n",
+    "cv2.imwrite(Path(base_dir/\"data/edges.png\"), edges)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,9 +247,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "rng = np.random.default_rng(seed=42)\n",
     "canvas = np.zeros_like(image)\n",
@@ -218,7 +278,15 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1059 shapes were found\n"
+     ]
+    }
+   ],
    "source": [
     "gray_image = rgb2gray(image)\n",
     "#Denoise the image\n",
@@ -237,9 +305,10 @@
     "plt.imshow(filtered_mask, cmap='gray')\n",
     "plt.axis('off')\n",
     "plt.title('Grayscale Image with Detected Contours')\n",
-    "labs, count = measure.label(binary, return_num=True)\n",
+    "labs, count = label(binary, return_num=True)\n",
     "print('{} shapes were found'.format(count))\n",
     "plt.savefig(Path(base_dir) / \"data\" / \"contours.png\", bbox_inches='tight', dpi=300)\n",
+    "\n",
     "plt.close()"
    ]
   },
@@ -248,6 +317,36 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "##approximated polygons\n",
+    "for contour in contours:\n",
+    "    if contour.ndim == 3 and contour.shape[1] == 1:\n",
+    "        contour = contour[:, 0]\n",
+    "\n",
+    "    if contour.ndim == 2 and contour.shape[1] == 2:\n",
+    "        coords = approximate_polygon(contour, tolerance=2.5)\n",
+    "        plt.plot(coords[:, 0], coords[:, 1], '-r')\n",
+    "    else:\n",
+    "        print(f\" invalid contour with shape: {contour.shape}\")\n",
+    "plt.savefig(Path(base_dir) / \"data\" / \"polygon.png\", bbox_inches='tight', dpi=300)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "### morphological cleaning\n",
     "# Convert to grayscale\n",
@@ -273,9 +372,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "###Morphological extraction\n",
     "\n",
